RESOLVED FIXED236945
Unreviewed, non-unified build fixes after 247508@main
https://bugs.webkit.org/show_bug.cgi?id=236945
Summary Unreviewed, non-unified build fixes after 247508@main
Lauro Moura
Reported 2022-02-20 18:12:56 PST
Non-unified build fixes after 247508@main
Attachments
Patch (977 bytes, patch)
2022-02-20 18:33 PST, Lauro Moura
no flags
[fast-cq] Patch (989 bytes, patch)
2022-02-20 19:50 PST, Lauro Moura
no flags
Lauro Moura
Comment 1 2022-02-20 18:33:18 PST
EWS
Comment 2 2022-02-20 18:50:51 PST
/Volumes/Data/worker/Commit-Queue/build/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).
Lauro Moura
Comment 3 2022-02-20 19:50:59 PST
Created attachment 452705 [details] [fast-cq] Patch
EWS
Comment 4 2022-02-20 19:56:20 PST
Committed r290238 (247563@main): <https://commits.webkit.org/247563@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 452705 [details].
Radar WebKit Bug Importer
Comment 5 2022-02-20 19:57:17 PST
Note You need to log in before you can comment on or make changes to this bug.