Unreviewed, non-unified build fixes after 247508@main https://bugs.webkit.org/show_bug.cgi?id=236945

* dom/ImageOverlay.h: Forward declare document.



Canonical link: https://commits.webkit.org/247563@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290238 268f45cc-cd09-0410-ab3c-d52691b4dbfc